2007-04-14  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/NewStuffManager.cs
	* src/libnsm/Downloaders/HttpDownloader.cs
	* src/libnsm/Downloaders/AbstractDownloader.cs
	* src/libnsm/Downloaders/IDownloader.cs
	* src/libnsm/Downloaders/FtpDownloader.cs
	* src/libnsm/Compression/Decompresser.cs
	* src/libnsm/Downloader.cs
	* src/libnsm/NewStuff.cs
	* src/libnsm/Makefile.am
	* src/libnsm/DownloadItem.cs
	* src/nsm/nsm.mdp
	* TODO:
	Refactored downloading

2007-02-09  Sebastian Pölsterl  <marduk@k-d-w.org>

	* configure.ac:
	Post release version bump

========== Version 0.2.2 released 2007-02-09 ==========

2007-02-09  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/ConfParser.cs:
	* src/libnsm/NewStuff.cs:
	Added custom exceptions

2007-02-09  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/libnsm/AssemblyInfo.cs.in:
	* src/nsm/AssemblyInfo.cs.in:
	* src/nsm/Main.cs:
	* src/nsm/Makefile.am:
	Added basic command line options

2007-02-07  Sebastian Pölsterl  <marduk@k-d-w.org>

	* configure.ac:
	* Makefile.am:
	* src/libnsm/Makefile.am:
	* src/nsm/Makefile.am:
	Updated: Minimum Mono version to 1.1.8
    Added: Check for ndesk-dbus-1.0 and only use internal version
    if it isn't available

2007-01-18  Sebastian Pölsterl  <marduk@k-d-w.org>

	* configure.ac:
	Late post release version bump

2007-01-15  Sebastian Pölsterl  <marduk@k-d-w.org>

	* src/nsm/Main.cs:
	Fixed: Service could not be found if new-stuff-manager did not start, yet

2007-01-11  Sebastian Pölsterl  <marduk@k-d-w.org>

    * configure.ac:
    * Makefile.am:
    * specs/deskbarapplet.conf
    * specs/Makefile.am:
    Added specs dir

========== Version 0.2.1 released 2007-01-03 ==========

2007-01-03  Sebastian Pölsterl  <marduk@k-d-w.org>

    * src/libnsm/Verification/IVerifier.cs:
    * src/libnsm/ConfParser.cs:
    * src/libnsm/Downloader.cs:
    * src/libnsm/NewStuff.cs:
    * src/libnsm/NewStuffManager.cs:
    Added API documentation
