@@ -1,5 +1,14 @@
 2007-04-14  Sebastian Pölsterl  <marduk@k-d-w.org>
 
+	* src/libnsm/Downloaders/HttpDownloader.cs
+	* src/libnsm/Downloaders/AbstractDownloader.cs
+	* src/libnsm/Downloaders/FtpDownloader.cs
+	* src/libnsm/NewStuff.cs
+	* src/libnsm/DownloadItem.cs:
+	Created namespace Nsm.Downloaders
+	
+2007-04-14  Sebastian Pölsterl  <marduk@k-d-w.org>
+
 	* src/libnsm/NewStuffManager.cs
 	* src/libnsm/Downloaders/HttpDownloader.cs
 	* src/libnsm/Downloaders/AbstractDownloader.cs
